--- a/index.html
+++ b/index.html
@@ -14,23 +14,16 @@
 						<th>Total</th>
 					</tr>
 					<tr>
-						<td><input id="money" type="text" name="money"></td>
-						<td><input id="lessons" type="text" name="lessons"></td>
+						<td><input id="money" type="text" name="money" oninput=""nput="calculate()"></td>
+						<td><input id="lessons" type="text" name="lessons" oninput="calculate()"></td>
 						<td><input id="total" type="text" name="total" disabled></td>
 					</tr>
 					<tr>
-						<th colspan="3"><input type="button" onClick="myFunction()" value="Calculate"></th>
+						<th colspan="3"><input type="button" onInput="calculate.js" value="Calculate"></th>
 					</tr>
 				</table>
 			</form>
 		</div>
-    <script>
-    function myFunction() {
-      money = document.getElementById("money").value;
-      lessons = document.getElementById("lessons").value * 340;
-      document.getElementById("total").value = Number(money) + Number(lessons);
-    }
-    </script>
+    <script type="text/javascript" src="calculate.js"></script>
   </body>
-<!-- 32113361 -->
 </html>
