--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 			<form>
 				<table>
 					<tr>
-						<th>Money</th>
-						<th>Lessons</th>
-						<th>Total</th>
+						<td><input id="money" type="text" name="money" oninput="calculate()"></td>
+						<th>MONEY</th>
 					</tr>
 					<tr>
-						<td><input id="money" type="text" name="money" oninput=""nput="calculate()"></td>
 						<td><input id="lessons" type="text" name="lessons" oninput="calculate()"></td>
-						<td><input id="total" type="text" name="total" disabled></td>
+						<th>LESSONS</th>
 					</tr>
 					<tr>
-						<th colspan="3"><input type="button" onInput="calculate.js" value="Calculate"></th>
-					</tr>
+						<td><input id="total" type="text" name="total" disabled></td>
+						<th>TOTAL</th>
 				</table>
 			</form>
 		</div>
     <script type="text/javascript" src="calculate.js"></script>
   </body>
 </html>
+
