Visuals, also no annoying drop-down.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
   <body>
 		<div class="calculator">
-			<form>
+			<form autocomplete="off">
 				<table>
 					<tr>
 						<td><input id="money" type="text" name="money" oninput="calculate()"></td>
