--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 			<form autocomplete="off">
 				<table>
 					<tr>
-						<td><input id="money" type="text" name="money" oninput="calculate()"></td>
+						<td><input id="money" type="text" name="money" oninput="calcu()"></td>
 						<th>MONEY</th>
 					</tr>
 					<tr>
-						<td><input id="lessons" type="text" name="lessons" oninput="calculate()"></td>
+						<td><input id="lessons" type="text" name="lessons" oninput="calcu()"></td>
 						<th>LESSONS</th>
 					</tr>
 					<tr>
